# XAWin

./: .gitignore  CMakeLists.txt
docs/: X11.drawio
src/: CMakeLists.txt  globals.h  window.c  x11.c  x11.h
test/: CMakeLists.txt  main.c
